update on small projects

--- a/user_authentication_form/style.css
+++ b/user_authentication_form/style.css
@@ -76,7 +76,7 @@ input, textarea{
     font-size: 24px;
     color: var(--font);
     border-radius: 15px;
-}
+}z
 #name, #email{
     height: 48px;  
 }
